[package]
name = "dez80"
version = "3.0.0"
description = "A Z80 disassembly library."
repository = "https://github.com/rzumer/dez80"
authors = ["Raphaël Zumer <rzumer@tebako.net>"]
license = "MIT"
edition = "2018"

[dependencies]
strum = "0.19"
strum_macros = "0.19"

[dev-dependencies]
criterion = "0.3"
rayon = "1.4"

[[bench]]
name = "bench"
harness = false
